@@ -17,13 +17,9 @@ class WC_Stripe_Inbox_Notes {
 	const CAMPAIGN_2020_CLEANUP_ACTION = 'wc_stripe_apple_pay_2020_cleanup';
 
 	public function __construct() {
-		if ( ! WC_Stripe_UPE_Compatibility::are_inbox_notes_supported() ) {
-			return;
-		}
-
 		add_action( self::POST_SETUP_SUCCESS_ACTION, [ self::class, 'create_marketing_note' ] );
 		add_action( self::CAMPAIGN_2020_CLEANUP_ACTION, [ self::class, 'cleanup_campaign_2020' ] );
-		add_action( 'admin_init', [ self::class, 'create_upe_availability_note' ] );
+		add_action( 'admin_init', [ self::class, 'create_upe_notes' ] );
 
 		// Schedule a 2020 holiday campaign cleanup action if needed.
 		// First, check to see if we are still before the cutoff.
@@ -36,9 +32,16 @@ class WC_Stripe_Inbox_Notes {
 		}
 	}
 
-	public static function create_upe_availability_note() {
+	public static function create_upe_notes() {
+		if ( ! WC_Stripe_UPE_Compatibility::are_inbox_notes_supported() ) {
+			return;
+		}
+
 		require_once WC_STRIPE_PLUGIN_PATH . '/includes/notes/class-wc-stripe-upe-availability-note.php';
 		WC_Stripe_UPE_Availability_Note::init();
+
+		require_once WC_STRIPE_PLUGIN_PATH . '/includes/notes/class-wc-stripe-upe-stripelink-note.php';
+		WC_Stripe_UPE_StripeLink_Note::init( new WC_Stripe_UPE_Payment_Gateway() );
 	}
 
 	public static function get_campaign_2020_cutoff() {
@@ -121,7 +124,7 @@ class WC_Stripe_Inbox_Notes {
 	 */
 	public static function create_marketing_note() {
 		// Make sure conditions for this note still hold.
-		if ( ! self::should_show_marketing_note() ) {
+		if ( ! self::should_show_marketing_note() || ! WC_Stripe_UPE_Compatibility::are_inbox_notes_supported() ) {
 			return;
 		}
 
@@ -169,6 +172,10 @@ class WC_Stripe_Inbox_Notes {
 	 * on/about 2020 Dec 22.
 	 */
 	public static function cleanup_campaign_2020() {
+		if ( ! WC_Stripe_UPE_Compatibility::are_inbox_notes_supported() ) {
+			return;
+		}
+
 		$admin_notes_class = WC_Stripe_Woo_Compat_Utils::get_notes_class();
 		if ( ! class_exists( $admin_notes_class ) || ! class_exists( 'WC_Data_Store' ) ) {
 			return;
